# AI_Training

./: .gitignore  README.md  pyproject.toml
day1/: day1_basic_python_api.ipynb
day10/: day10_langchain_basics_part1.ipynb
day11/: day11_langchain_basics_part1.ipynb  day11_langchain_part2_rag_pipeline.ipynb
day12/: day12_langchain_part2_rag_pipeline.ipynb  day12_pdf_extraction_start.ipynb
day13/: day13_pdf_extraction_start.ipynb  day13_rag_integration.ipynb
day14/: day14_document_specific_qa.ipynb  day14_rag_integration.ipynb
day14/team-submissions/: fullname_day1.ipynb
day15/: day15_document_specific_qa.ipynb  day15_fine_tune_demo.ipynb
day2/: day2_api_ai_integration.ipynb
day3/: day3_docker_folder_structure.ipynb  docker-compose.yml.sample
day4/: day4_tokenization.ipynb
day5/: day5_embeddings_vector_db_chroma.ipynb
day6/: SKILL-SETUP-INSTRUCTIONS.md  day6_agent_skills.ipynb
day7/: day7_mcp_servers.ipynb
day8/: day8_devcontext_walkthrough.ipynb
poc/ai_customer_Assistant/: .env.ngrok  .env.ngrok.example  AGENTS.md  README.md
poc/ai_customer_Assistant/app/: .env.example  Dockerfile  package-lock.json  package.json
poc/ai_customer_Assistant/app/src/: app.js  (+1 more)
poc/ai_customer_Assistant/db/: schema.sql  seed.sql
poc/invoice_intelligence/: requirements.txt  server.py
poc/invoice_intelligence/app/: index.html  package-lock.json  package.json
poc/invoice_intelligence/chroma_db/: chroma.sqlite3
poc/product_search/: README.md  main.py  requirements.txt
resources/: sample_notebook.ipynb
setup/: SETUP-PC.md  SETUP-linux.md  SETUP-mac.md
(+17 files in other folders)
