[project]
name = "ai-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb==0.5.23",
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.13",
    "langchain-chroma>=0.2.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "onnxruntime==1.20.1",
    "openai>=2.29.0",
    "pillow>=12.1.1",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
]
